[gd_scene load_steps=4 format=2]

[ext_resource path="res://escenario.gd" type="Script" id=1]
[ext_resource path="res://imagen/carta0.png" type="Texture" id=2]
[ext_resource path="res://imagen/fondo0.jpg" type="Texture" id=3]

[node name="escenario" type="Node2D"]
script = ExtResource( 1 )

[node name="fondo0" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="jugador" type="Node2D" parent="."]
position = Vector2( 16, -8 )

[node name="hud" type="Node2D" parent="jugador"]
scale = Vector2( 2.5, 2.5 )

[node name="ft" type="Sprite" parent="jugador/hud"]
position = Vector2( 208.123, 31.8774 )
rotation = 1.5708
scale = Vector2( 0.130728, 0.588544 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="jugador/hud"]
margin_left = -6.0
margin_top = 15.4
margin_right = 412.0
margin_bottom = 76.4
text = "Be careful at the bar,
 click to play against the masters of cinquillo"
align = 1

[node name="Timerempezar" type="Timer" parent="jugador/hud"]
wait_time = 2.0
one_shot = true

[node name="carta" type="Sprite" parent="jugador"]
position = Vector2( 108, 438 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Texto" type="Node2D" parent="jugador/carta"]
position = Vector2( -136, -8 )
scale = Vector2( 3, 3 )

[node name="Ataque" type="Label" parent="jugador/carta/Texto"]
margin_right = 70.0
margin_bottom = 14.0
text = "Tu ataque: "

[node name="ataque" type="Sprite" parent="jugador/carta"]
position = Vector2( 402, 0 )
texture = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="jugador"]
margin_left = -12.0
margin_top = -5.0
margin_right = 28.0
margin_bottom = 35.0
rect_scale = Vector2( 26.0083, 15.3282 )

[node name="Timer" type="Timer" parent="jugador/TextureButton"]
wait_time = 2.0
one_shot = true

[node name="malo" type="Node2D" parent="."]
position = Vector2( 52, 10 )
scale = Vector2( 2, 2 )

[node name="Sprite" type="Sprite" parent="malo"]
position = Vector2( 402.5, 218 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="malo"]
margin_left = 373.5
margin_top = 220.0
margin_right = 413.5
margin_bottom = 234.0
text = "ggg"

[connection signal="timeout" from="jugador/hud/Timerempezar" to="." method="_on_Timerempezar_timeout"]
[connection signal="pressed" from="jugador/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="jugador/TextureButton/Timer" to="." method="_on_Timer_timeout"]
